fix responsive design and carousel alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+body {
+  font-size: 20px;
+}
 .row-header {
   margin: 0px auto;
   padding: 0px 0px;
@@ -9,20 +12,26 @@
   min-height: 300px;
 }
 .footer {
-  background-color: #20C0B8;
+  height: 200px;
+  background-color: #067E78;
+  color: floralwhite;
   margin: 0px auto;
   padding: 20px 0px;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer a {
+  color: floralwhite;
 }
 .jumbotron {
   margin: 0px auto;
   padding: 70px 30px;
   background: #067E78;
   color: floralwhite;
-}
-address {
-  font-size: 100%;
-  margin: 0px;
-  color: #0f0f0f;
 }
 /* a {
   color: #036A64;
@@ -34,30 +43,37 @@ address {
 } */
 
 .tab-content {
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    padding: 10px;
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;    
+  border-bottom: 1px solid #ddd;
+  padding: 10px;
+}
+#cert {
+  height: 600px;
+  display: flex;
+  justify-content: center;
 }
 .skil {
   list-style: none;
 }
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
- 
   background-color: black;
- 
- 
+}
+.carousel-inner {
+  height: 500px;
+  display: flex;
+  align-items: center;
 }
 .carousel .carousel-item {
   height: 500px;
-  width: 500px;
-
 }
 .carousel .carousel-item img {
   position: absolute;
   margin: auto;
   display: block;
+  width: auto !important;
+  height: 100%;
   
 }
 #carouselButton {
@@ -68,7 +84,12 @@ address {
 }
 .carousel       
 {
-  width: 520px;
-  height: 400px;
+  width: 650px;
+  height: 500px;
   align-content: center;
+}
+.nav-link {
+  font-size: 24px;
+  font-weight: 600;
+  color: #067E78;
 }
